--- a/src/app/folder/folder.page.scss
+++ b/src/app/folder/folder.page.scss
@@ -1,28 +1,29 @@
 ion-menu-button {
-  color: var(--ion-color-primary);
+  color: #ffffff;
+}
+.topo{
+display: flex;
+background: #0D53FC;
+width: 100%;
+min-height: var(--min-height);
 }
 
-#container {
-  text-align: center;
+ion-content{
+.background{
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  background: #E6E7E9;
+  width: 100vw;
+  height: 100vh;
+  font-size: 24px;
 }
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.text{
+  color: #000;
 }
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-  color: #8c8c8c;
-  margin: 0;
-}
-
-#container a {
+a.fill-div {
+  display: block;
+  height: 100%;
+  width: 100%;
   text-decoration: none;
+  color: #000;
+}
 }
