exclusão da tela folder e criação da tela home

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,7 +4,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Terappeuta</ion-title>
+    <ion-title><a href="#" [routerLink]="['/home']" class="fill-div">Terappeuta</a></ion-title>
   </div>
 </ion-toolbar>
 
