--- a/src/app/publicacao/publicacao.page.html
+++ b/src/app/publicacao/publicacao.page.html
@@ -1,13 +1,15 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>publicacao</ion-title>
+    <div class="topo">
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title><a href="#" [routerLink]="['/home']" class="fill-div">Terappeuta</a></ion-title>
+    </div>
   </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">publicacao</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+  <ion-content [fullscreen]="true">
+    <div class="background">
+
+    </div>
+  </ion-content>
