--- a/src/app/publicacao/publicacao.page.html
+++ b/src/app/publicacao/publicacao.page.html
@@ -10,6 +10,14 @@
 
   <ion-content [fullscreen]="true">
     <div class="background">
+      <div class="publi">
+        <img class="publi" src="assets/foto2.jpg">
+        <h1>Publicação</h1>
+        <img class="icon"  src="assets/icon/attach_file.png">
+      </div>
+      <div class="cx-texto">
+        <ion-textarea rows="10" placeholder="O que gostaria compartilhar?"></ion-textarea>
+      </div>
 
     </div>
   </ion-content>
