--- a/src/app/publicacao/publicacao.page.scss
+++ b/src/app/publicacao/publicacao.page.scss
@@ -22,15 +22,38 @@ ion-menu-button {
       height: 100vh;
       font-size: 24px;
     }
-    .text{
-      color: #000;
+    .publi{
+      display: flex;
     }
-    a.fill-div {
-      display: block;
-      height: 100%;
-      width: 100%;
-      text-decoration: none;
-      color: #000;
+    img.publi{
+      margin-top: 5px;
+      margin-left: 10px;
+      width: 70px;
+      height: 70px;
+      border-radius: 50px;
+      border-color: #ffffff;
+    }
+    h1{
+      margin-left: 30px;
+      margin-right: 30px;
+      font-size: 40px;
+      color: #4B4B4B;
+    }
+    img.icon{
+      display: flex;
+      margin-top: 15px;
+      margin-left: 20px;
+      width: 40px;
+      height: 40px;
+    }
+    .cx-texto{
+      background: #ffffff;
+      width: 390px;
+      height: 300px;
+      margin-top: 50px;
+      margin-left: 10px;
+      color: black;
+      text-size-adjust: 10px;
     }
 
     }
