--- a/src/app/publicacao/publicacao.page.scss
+++ b/src/app/publicacao/publicacao.page.scss
@@ -1,36 +1,83 @@
 ion-menu-button {
-  color: #ffffff;
-}
-.topo{
-display: flex;
-background: #0D53FC;
-width: 100%;
-min-height: var(--min-height);
-}
-a.fill-div {
-  display: block;
-  height: 100%;
-  width: 100%;
-  text-decoration: none;
-  color: #ffffff;
-}
-ion-content{
-  .background{
-    position: absolute;
-    background: #E6E7E9;
-    width: 100vw;
-    height: 100vh;
-    font-size: 24px;
+    color: #ffffff;
   }
-  .text{
-    color: #000;
+  .topo{
+  display: flex;
+  background: #0D53FC;
+  width: 100%;
+  min-height: var(--min-height);
+  }
+  .tera {
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+    color: #ffffff;
   }
   a.fill-div {
     display: block;
     height: 100%;
     width: 100%;
     text-decoration: none;
-    color: #000;
+    color: #ffffff;
   }
+  img.not-icon{
+    position: relative;
+    width: 30px;
+    height: 30px;
+    margin-top: 13px;
+    margin-right: 10px;
+  }
+  ion-content{
+    .background{
+      position: absolute;
+      background: #E6E7E9;
+      width: 100vw;
+      height: 100vh;
+      font-size: 24px;
 
-  }
+    }
+    .publi{
+      display: flex;
+    }
+    img.publi{
+      margin-top: 5px;
+      margin-left: 10px;
+      width: 70px;
+      height: 70px;
+      border-radius: 50px;
+      border-color: #ffffff;
+    }
+    h1{
+      margin-left: 30px;
+      margin-right: 30px;
+      font-size: 40px;
+      color: #4B4B4B;
+    }
+    img.icon{
+      display: flex;
+      margin-top: 20px;
+      margin-left: 20px;
+      width: 40px;
+      height: 40px;
+    }
+    .cx-texto{
+      background: #ffffff;
+      width: 390px;
+      height: 300px;
+      margin-top: 50px;
+      margin-left: 10px;
+      color: black;
+      text-size-adjust: 10px;
+    }
+    .btn{
+      background: #0D53FC;
+      width: 150px;
+      height: 35px;
+      color: #ffffff;
+      border-radius: 5px;
+      margin-top: 20px;
+
+    }
+
+    }
