--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,6 +5,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title><a href="#" [routerLink]="['/home']" class="tera">Terappeuta</a></ion-title>
+    <a href="#" [routerLink]="['/notificacoes']"><img class="not-icon" src="assets/icon/alarm_alert.png"></a>
   </div>
 </ion-toolbar>
 
@@ -19,7 +20,19 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <div class="background">
+    <ion-list class="background">
+      <ion-card class="cardBack" *ngFor="let publicacao of publicacoes | async">
+        <ion-card-header  *ngFor="let user of usuario | async">
+          <ion-card-title class="title">
+            <img class="imgPost" src="assets/foto2.jpg">
+            <p class="pPost">{{ user.nome }}</p>
+            <p class="datapubli">{{ publicacao.data }}</p>
+          </ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <p class="conteudoPost">{{ publicacao.conteudo }}</p>
+        </ion-card-content>
+      </ion-card>
+    </ion-list>
 
-  </div>
 </ion-content>
