--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -14,6 +14,13 @@ min-height: var(--min-height);
   text-decoration: none;
   color: #ffffff;
 }
+img.not-icon{
+  position: relative;
+  width: 30px;
+  height: 30px;
+  margin-top: 13px;
+  margin-right: 10px;
+}
 .publi{
   background: #E6E7E9;
   border: 1px outset black;
@@ -54,6 +61,47 @@ ion-content{
     width: 100vw;
     height: 100vh;
     font-size: 24px;
+  }
+  .cardBack{
+    background: #d9d9d9;
+  }
+
+  .title{
+    display: flex;
+  }
+  .imgPost{
+    width: 40px;
+    height: 40px;
+    margin-top: -10px;
+    margin-left: -10px;
+    border-radius: 50px;
+    border-color: #ffffff;
+  }
+
+  .pPost{
+    margin-left: 10px;
+    margin-top: -5px;
+    font-size: 14px;
+    color: #000;
+  }
+  .datapubli{
+    margin-top: 15px;
+    margin-left: -120px;
+    font-size: 10px;
+    color: #000;
+  }
+  .conteudoPost{
+    font-size: 14px;
+    color: #000;
+  }
+
+  ion-card {
+    margin-bottom: 1rem;
+  }
+
+  ion-card-header ion-card-subtitle {
+    margin-top: 0.25rem;
+    font-size: 0.8rem;
   }
 
 
