--- a/src/app/publicacao/publicacao.page.scss
+++ b/src/app/publicacao/publicacao.page.scss
@@ -7,12 +7,26 @@ ion-menu-button {
   width: 100%;
   min-height: var(--min-height);
   }
+  .tera {
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+    color: #ffffff;
+  }
   a.fill-div {
     display: block;
     height: 100%;
     width: 100%;
     text-decoration: none;
     color: #ffffff;
+  }
+  img.not-icon{
+    position: relative;
+    width: 30px;
+    height: 30px;
+    margin-top: 13px;
+    margin-right: 10px;
   }
   ion-content{
     .background{
@@ -21,6 +35,7 @@ ion-menu-button {
       width: 100vw;
       height: 100vh;
       font-size: 24px;
+
     }
     .publi{
       display: flex;
@@ -41,7 +56,7 @@ ion-menu-button {
     }
     img.icon{
       display: flex;
-      margin-top: 15px;
+      margin-top: 20px;
       margin-left: 20px;
       width: 40px;
       height: 40px;
@@ -54,6 +69,15 @@ ion-menu-button {
       margin-left: 10px;
       color: black;
       text-size-adjust: 10px;
+    }
+    .btn{
+      background: #0D53FC;
+      width: 150px;
+      height: 35px;
+      color: #ffffff;
+      border-radius: 5px;
+      margin-top: 20px;
+
     }
 
     }
