tela agenda e publicacao

--- a/src/app/publicacao/publicacao.page.html
+++ b/src/app/publicacao/publicacao.page.html
@@ -8,6 +8,7 @@
     <a href="#" [routerLink]="['/notificacoes']"><img class="not-icon" src="assets/icon/alarm_alert.png"></a>
   </div>
 </ion-toolbar>
+</ion-header>
 
   <ion-content [fullscreen]="true">
     <div class="background">
