--- a/src/app/publicacao/publicacao.page.scss
+++ b/src/app/publicacao/publicacao.page.scss
@@ -46,7 +46,7 @@ ion-menu-button {
       width: 70px;
       height: 70px;
       border-radius: 50px;
-      border-color: #ffffff;
+      border: 1px solid #fff;
     }
     h1{
       margin-left: 30px;
