--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,25 +8,26 @@
     <a href="#" [routerLink]="['/notificacoes']"><img class="not-icon" src="assets/icon/alarm_alert.png"></a>
   </div>
 </ion-toolbar>
-
-<div class="publi">
-  <a href="#" [routerLink]="['/publicacao']" class="fill-div">
-    <img class="publi" src="assets/foto2.jpg">
-    <p class="p">Gostaria de compartilhar algo?</p>
-    <img class="icon"  src="assets/icon/image_icon.png">
-  </a>
-</div>
-
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
+  <div class="publi">
+    <a href="#" [routerLink]="['/publicacao']" class="fill-div">
+      <img class="publi" src="assets/foto2.jpg">
+      <p class="p">Gostaria de compartilhar algo?</p>
+      <img class="icon"  src="assets/icon/image_icon.png">
+    </a>
+  </div>
+
     <ion-list class="background">
+
       <ion-card class="cardBack" *ngFor="let publicacao of publicacoes | async">
         <ion-card-header  *ngFor="let user of usuario | async">
           <ion-card-title class="title">
             <img class="imgPost" src="assets/foto2.jpg">
             <p class="pPost">{{ user.nome }}</p>
-            <p class="datapubli">{{ publicacao.data }}</p>
+            <p class="datapubli">{{ publicacao.data.split('-')[1] + '/' + publicacao.data.split('-')[2] + '/' + publicacao.data.split('-')[0] | date:'dd/MM/yyyy' }}, {{ publicacao.hora }}</p>
           </ion-card-title>
         </ion-card-header>
         <ion-card-content>
