--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -32,7 +32,7 @@ img.publi{
   width: 50px;
   height: 50px;
   border-radius: 50px;
-  border-color: #ffffff;
+  border: 1px solid #fff;
 }
 img.icon{
   display: flex;
@@ -75,7 +75,7 @@ ion-content{
     margin-top: -10px;
     margin-left: -10px;
     border-radius: 50px;
-    border-color: #ffffff;
+    border: 1px solid #fff;
   }
 
   .pPost{
