--- a/src/app/agenda/agenda.page.html
+++ b/src/app/agenda/agenda.page.html
@@ -1,8 +1,8 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" class="header">
   <ion-toolbar>
     <div class="topo">
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-menu-button class=""></ion-menu-button>
     </ion-buttons>
     <ion-title><a href="#" [routerLink]="['/home']" class="tera">Terappeuta</a></ion-title>
     <a href="#" [routerLink]="['/notificacoes']"><img class="not-icon" src="assets/icon/alarm_alert.png"></a>
