--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,25 @@
-<ion-app>
-  <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay">
-      <ion-content>
-        <ion-list id="inbox-list">
 
+
+<ion-app>
+  <ion-menu contentId="main-content" type="overlay">
+    <ion-content >
+      <ion-list >
+        <div class="background">
           <ion-list-header>Inbox</ion-list-header>
           <ion-note>hi@ionicframework.com</ion-note>
+        </div>
 
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-              <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
+            <ion-menu-toggle   >
+              <ion-item  *ngFor="let p of appPages; let i = index">
+                <ion-label routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" >{{ p.title }}</ion-label>
+              </ion-item>
+              <ion-button class="btSair" color="danger" [routerLink]="['/login']"  size="small">Sair</ion-button>
+            </ion-menu-toggle>
+          </ion-list>
+        </ion-content>
+      </ion-menu>
+
     <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
-</ion-app>
+  </ion-app>
+
+
