--- a/src/app/cadpacientes/cadpacientes.page.html
+++ b/src/app/cadpacientes/cadpacientes.page.html
@@ -10,10 +10,16 @@
 </ion-toolbar>
 </ion-header>
 
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title>cadpacientes</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content [fullscreen]="true">
-  <div class="background">
-    <div class="publi">
-      <h1>Historico de consultas</h1>
-    </div>
-  </div>
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">cadpacientes</ion-title>
+    </ion-toolbar>
+  </ion-header>
 </ion-content>
