--- a/src/app/historic-consult/historic-consult.page.scss
+++ b/src/app/historic-consult/historic-consult.page.scss
@@ -30,6 +30,10 @@ ion-content{
     height: 100vh;
     font-size: 24px;
   }
+  .publi{
+    background: #E6E7E9;
+    height: 60px;
+  }
   h1{
     margin-left: 50px;
     margin-right: 30px;
