--- a/src/app/notificacoes/notificacoes.page.html
+++ b/src/app/notificacoes/notificacoes.page.html
@@ -1,7 +1,13 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" class="header">
   <ion-toolbar>
-    <ion-title>notificacoes</ion-title>
-  </ion-toolbar>
+    <div class="topo">
+    <ion-buttons slot="start">
+      <ion-menu-button class=""></ion-menu-button>
+    </ion-buttons>
+    <ion-title><a href="#" [routerLink]="['/home']" class="tera">Terappeuta</a></ion-title>
+    <a href="#" [routerLink]="['/notificacoes']"><img class="not-icon" src="assets/icon/alarm_alert.png"></a>
+  </div>
+</ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
