--- a/src/app/historic-consult/historic-consult.page.html
+++ b/src/app/historic-consult/historic-consult.page.html
@@ -14,6 +14,19 @@
   <div class="background">
     <div class="publi">
       <h1>Historico de consultas</h1>
+      <div class="cx" *ngFor="let consulta of consultas | async">
+        <div class="circle">
+          <p class="pdia">{{ consulta.data.split('-')[2]  }}</p>
+          <p class="pmes">{{ consulta.data | date:'MMM' }}</p>
+        </div>
+        <div class="info">
+        <p>{{consulta.nome}}</p>
+        <p class="info-status">{{consulta.inicio}} - {{consulta.fim}} | {{consulta.status}}</p>
+      </div>
+    </div>
+
     </div>
   </div>
+
+
 </ion-content>
