--- a/src/app/historic-consult/historic-consult.page.scss
+++ b/src/app/historic-consult/historic-consult.page.scss
@@ -31,9 +31,49 @@ ion-content{
     font-size: 24px;
   }
   .publi{
-    background: #E6E7E9;
-    height: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
+  .cx{
+    background: #ffffff;
+    display: flex;
+    width: 380px;
+    height: 60px;
+    margin-top: 10px;
+    font-size: 14px;
+  }
+  .circle{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #d9d9d9;
+    width: 48px;
+    height: 48px;
+    margin-top: 5px;
+    margin-left: 5px;
+    border-radius: 100px;
+  }
+  .pdia{
+    font-size: 18px;
+    margin-top: 10px
+  }
+  .pmes{
+    font-size: 14px;
+    margin-top: -20px
+  }
+  .info{
+    flex-direction: column;
+    margin-left: 10px;
+    margin-top: -3px;
+  }
+  .info-status{
+    color: #4B4B4B;
+    margin-top: -10px;
+  }
+
   h1{
     margin-left: 50px;
     margin-right: 30px;
