--- a/src/app/cadpacientes/cadpacientes.page.html
+++ b/src/app/cadpacientes/cadpacientes.page.html
@@ -10,16 +10,61 @@
 </ion-toolbar>
 </ion-header>
 
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>cadpacientes</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">cadpacientes</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="background">
+    <h1>Cadastro</h1>
+    <div class="publi">
+      <p>Nome</p>
+      <input class="cxNome">
+
+      <div id="campo">
+        <div class="um">
+          <p>Telefone</p>
+          <input>
+        </div>
+        <div>
+          <p>Data de nascimento</p>
+          <input>
+        </div>
+      </div>
+
+      <div id="campo">
+        <div>
+          <p>CPF</p>
+          <input>
+        </div>
+        <div>
+          <p>RG</p>
+          <input>
+        </div>
+      </div>
+
+      <p>Gênero</p>
+      <select class="cxNome">
+        <option>Selecione</option>
+        <option>Masculino</option>
+        <option>Feminino</option>
+        <option>Outro</option>
+      </select>
+
+      <div class="plano">
+        <h2>Plano Financeiro</h2>
+        <div id="campo-plano">
+          <div>
+            <p>Plano</p>
+            <input class="meuInput">
+          </div>
+          <div>
+            <p>valor</p>
+            <input class="meuInput">
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <ion-button class="btn1">Salvar</ion-button>
+    <ion-button class="btn2">Cancelar</ion-button>
+
+  </div>
 </ion-content>
