tela com todos os paciente e campo de pesquisar para localizar-los

--- a/src/app/psicologo/cadpacientes/cadpacientes.page.html
+++ b/src/app/psicologo/cadpacientes/cadpacientes.page.html
@@ -20,7 +20,7 @@
       <div id="campo">
         <div class="um">
           <p>Telefone</p>
-          <input>
+          <input >
         </div>
         <div>
           <p>Data de nascimento</p>
@@ -52,7 +52,12 @@
         <div id="campo-plano">
           <div>
             <p>Plano</p>
-            <input class="meuInput">
+            <select class="meuSelect">
+              <option>Selecione</option>
+              <option>Sessão</option>
+              <option>Mensal</option>
+              <option></option>
+            </select>
           </div>
           <div>
             <p>valor</p>
