--- a/src/app/psicologo/cadpacientes/cadpacientes.page.scss
+++ b/src/app/psicologo/cadpacientes/cadpacientes.page.scss
@@ -100,6 +100,17 @@ ion-content{
       border: 1px solid #7d7d7d;
     }
   }
+  .meuSelect{
+    background: #fff;
+      width: 150px;
+      height: 40px;
+      margin-top: -5px;
+      margin-right: 20px;
+      font-size: 14px;
+      color: #7d7d7d;
+      border-radius: 5px;
+      border: 1px solid #7d7d7d;
+  }
 
   .btn1{
     --background: #0239BD;
