tela do paciente

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
     <ion-content >
       <ion-list >
         <div class="background">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
+          <img class="imgPost" src="assets/foto2.jpg">
+          <ion-label class="nome">Nome</ion-label>
         </div>
 
             <ion-menu-toggle   >
