--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,22 @@
 .background{
   background: #000;
   width: 200%;
+  height: 90px;
+  margin-top: -8px;
+  color: #fff;
 }
+.imgPost{
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  margin-top: 15px;
+  margin-left: 10px;
+  border-radius: 50px;
+  border: 1px solid #fff;
+}
+.nome{
+  margin-left: 10px;
+  margin-top: -10px;
+}
+
 
