--- a/src/app/login-paciente/login-paciente.page.html
+++ b/src/app/login-paciente/login-paciente.page.html
@@ -9,7 +9,7 @@
       <img class="publi" src="assets/psicologos_e_psicologia.png">
       <input class="campo" placeholder="E-mail">
       <input class="campo" placeholder="Senha" type="password">
-      <ion-button class="btn3" [routerLink]="['/home']">Login</ion-button>
+      <ion-button class="btn3" [routerLink]="['/home-paciente']">Login</ion-button>
     </div>
   </div>
 </ion-content>
