--- a/src/app/paciente/hist-diario/hist-diario.page.scss
+++ b/src/app/paciente/hist-diario/hist-diario.page.scss
@@ -41,4 +41,22 @@ ion-content{
     font-size: 40px;
     color: #4B4B4B;
   }
+  .campo{
+    display: inline-flex;
+    margin: 30px 10px 0px 10px;
+    color: #6a6a6a;
+  }
+  .imgIcon{
+    width: 30px;
+    height: 30px;
+  }
+  b{
+    margin: 6px 10px;
+    font-size: 18px;
+  }
+  .icon{
+    width: 30px;
+    height: 30px;
+    margin-left: 20px;
+  }
 }
