--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,9 +7,10 @@
       </div>
       <h1>Bem-Vindo</h1>
       <img class="publi" src="assets/psicologos_e_psicologia.png">
-      <input class="campo" placeholder="E-mail">
-      <input class="campo" placeholder="Senha" type="password">
-      <ion-button class="btn3" [routerLink]="['/home']">Login</ion-button>
+      <input class="campo" placeholder="E-mail" type="email" [(ngModel)]="email">
+      <input class="campo" placeholder="Senha" type="password" type="email" [(ngModel)]="senha">
+      <ion-button class="btn3" [disabled]="!canSave()" expand="block" (click)="entrar()">Login</ion-button>
+      <p (click)="nav()">Cadastre-se</p>
     </div>
   </div>
 </ion-content>
