--- a/src/app/paciente/home-paciente/home-paciente.page.scss
+++ b/src/app/paciente/home-paciente/home-paciente.page.scss
@@ -69,24 +69,26 @@ ion-content{
   .title{
     display: flex;
   }
+  .divt{
+    display: flex;
+    flex-direction: column;
+    margin: 0 0 0 10px;
+  }
   .imgPost{
     width: 40px;
     height: 40px;
-    margin-top: -10px;
-    margin-left: -10px;
+    margin-top: 5px;
+    margin-left: 10px;
     border-radius: 50px;
     border: 1px solid #fff;
   }
 
   .pPost{
-    margin-left: 10px;
-    margin-top: -5px;
     font-size: 14px;
     color: #000;
   }
   .datapubli{
-    margin-top: 15px;
-    margin-left: -120px;
+    margin-top: -10px;
     font-size: 10px;
     color: #000;
   }
@@ -103,4 +105,5 @@ ion-content{
     margin-top: 0.25rem;
     font-size: 0.8rem;
   }
+
   }
