--- a/src/app/psicologo/agenda/agenda.page.html
+++ b/src/app/psicologo/agenda/agenda.page.html
@@ -13,26 +13,38 @@
 <ion-content [fullscreen]="true">
   <div class="background">
     <div class="publi" *ngFor="let user of usuario | async">
+      <ng-container *ngIf="idUsuarioLogado === user.id ">
       <h1>Agenda</h1>
+
       <img class="fotoPerfil" src="assets/foto2.jpg">
       <h2>{{ user.nome }}</h2>
+
       <ion-button class="bt" [routerLink]="['/historic-consult']">Historico de consultas</ion-button>
       <div>
         <ion-grid>
+          <ng-container *ngFor="let agenda of agendaDia | async">
+            <ng-container *ngIf="idUsuarioLogado === agenda.idPsico">
           <ion-row class="cabecalho">
             <ion-col class="col1"><a (click)="decrementarContador()"><</a></ion-col>
             <ion-col size="5">{{ dia }}{{ dataFormatada }}</ion-col>
             <ion-col class="col2"><a (click)="incrementarContador()">></a></ion-col>
           </ion-row>
-          <ion-row class="corpo" *ngFor="let agenda of agendaDia | async">
-            <ion-col>{{agenda.inicio}} - {{agenda.fim}}</ion-col>
-            <ion-col>{{agenda.nome}}</ion-col>
-            <ion-col>{{agenda.status}}</ion-col>
-            <ion-col size="1"><img class="icon" src="assets/icon/approved.png"></ion-col>
-            <ion-col size="1"><img class="icon" src="assets/icon/cancel.png"></ion-col>
+
+          <ion-row class="corpo" >
+
+              <ion-col>{{agenda.inicio}} - {{agenda.fim}}</ion-col>
+              <ion-col>{{agenda.nome}}</ion-col>
+              <ion-col>{{agenda.status}}</ion-col>
+              <ion-col size="1"><img class="icon" src="assets/icon/approved.png"></ion-col>
+              <ion-col size="1"><img class="icon" src="assets/icon/cancel.png"></ion-col>
+
           </ion-row>
+        </ng-container>
+      </ng-container>
         </ion-grid>
+
       </div>
+    </ng-container>
     </div>
 
 
