--- a/src/app/psicologo/historic-consult/historic-consult.page.html
+++ b/src/app/psicologo/historic-consult/historic-consult.page.html
@@ -14,16 +14,20 @@
   <div class="background">
     <div class="publi">
       <h1>Historico de consultas</h1>
-      <div class="cx" *ngFor="let consulta of consultas | async">
-        <div class="circle">
-          <p class="pdia">{{ consulta.data.split('-')[2]  }}</p>
-          <p class="pmes">{{ consulta.data | date:'MMM' }}</p>
+      <ng-container *ngFor="let consulta of consultas | async">
+        <div class="cx"  *ngIf="idUsuarioLogado === consulta.idPsico">
+
+            <div class="circle">
+              <p class="pdia">{{ consulta.data.split('-')[2]  }}</p>
+              <p class="pmes">{{ consulta.data | date:'MMM' }}</p>
+            </div>
+            <div class="info">
+            <p>{{consulta.nome}}</p>
+            <p class="info-status">{{consulta.inicio}} - {{consulta.fim}} | {{consulta.status}}</p>
+          </div>
+
         </div>
-        <div class="info">
-        <p>{{consulta.nome}}</p>
-        <p class="info-status">{{consulta.inicio}} - {{consulta.fim}} | {{consulta.status}}</p>
-      </div>
-    </div>
+      </ng-container>
 
     </div>
   </div>
