--- a/src/app/psicologo/home/home.page.scss
+++ b/src/app/psicologo/home/home.page.scss
@@ -69,24 +69,26 @@ ion-content{
   .title{
     display: flex;
   }
+  .divt{
+    display: flex;
+    flex-direction: column;
+    margin: 0 0 0 10px;
+  }
   .imgPost{
     width: 40px;
     height: 40px;
-    margin-top: -10px;
-    margin-left: -10px;
+    margin-top: 5px;
+    margin-left: 10px;
     border-radius: 50px;
     border: 1px solid #fff;
   }
 
   .pPost{
-    margin-left: 10px;
-    margin-top: -5px;
     font-size: 14px;
     color: #000;
   }
   .datapubli{
-    margin-top: 15px;
-    margin-left: -120px;
+    margin-top: -10px;
     font-size: 10px;
     color: #000;
   }
@@ -102,6 +104,13 @@ ion-content{
   ion-card-header ion-card-subtitle {
     margin-top: 0.25rem;
     font-size: 0.8rem;
+  }
+  .deleteIcon{
+    width: 30px;
+    height: 30px;
+    margin-left: 50px;
+    margin-top: 10px;
+
   }
 
 
