--- a/src/app/psicologo/publicacao/publicacao.page.html
+++ b/src/app/psicologo/publicacao/publicacao.page.html
@@ -23,5 +23,8 @@
 
       <ion-button class="btn" (click)="cadastrar()">Publicar</ion-button>
 
+      <p>O ID do usuário logado é: {{ idUsuarioLogado }}</p>
+
+
     </div>
   </ion-content>
