--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,7 +8,7 @@
       <h1>Bem-Vindo</h1>
       <img class="publi" src="assets/psicologos_e_psicologia.png">
       <input class="campo" placeholder="E-mail" type="email" [(ngModel)]="email">
-      <input class="campo" placeholder="Senha" type="password" type="email" [(ngModel)]="senha">
+      <input class="campo" placeholder="Senha" type="password"  type="password" [(ngModel)]="senha">
       <ion-button class="btn3" [disabled]="!canSave()" expand="block" (click)="entrar()">Login</ion-button>
       <p (click)="nav()">Cadastre-se</p>
     </div>
