--- a/src/app/paciente/det-psicologo/det-psicologo.page.html
+++ b/src/app/paciente/det-psicologo/det-psicologo.page.html
@@ -12,7 +12,7 @@
 
 <ion-content [fullscreen]="true">
   <div class="background">
-    <div class="publi" *ngFor="let psi of psicologo | async">
+    <div class="publi" *ngFor="let psi of psicologo">
       <h1>Avaliação</h1>
       <img class="fotoPerfil" src="assets/foto2.jpg">
       <h2>{{ psi.nome }}</h2>
