--- a/src/app/psicologo/diario-paciente/diario-paciente.page.scss
+++ b/src/app/psicologo/diario-paciente/diario-paciente.page.scss
@@ -87,5 +87,23 @@ ion-content{
     background: #fff;
     font-size: 14px;
   }
+  .campo{
+    display: inline-flex;
+    margin: 30px 10px 0px 10px;
+    color: #6a6a6a;
+  }
+  .imgIcon{
+    width: 30px;
+    height: 30px;
+  }
+  b{
+    margin: 6px 10px;
+    font-size: 18px;
+  }
+  .icon{
+    width: 30px;
+    height: 30px;
+    margin-left: 20px;
+  }
 
 }
